# proyecto_delilah/src/controllers/usuario/eliminarUsuario.js
@@ -1,12 +1,12 @@
-const { updateUser } = require("../../models/usuario");
+const { deleteUser } = require("../../models/usuario");
 
 const eliminarUsuario = (req, res) =>
 
-    updateUser(req.user.id_usuario, req.body.estado_usuario) //uso el id_usuario del token
+    deleteUser(req.user.id_usuario) //uso el id_usuario del token por si alguien quiere eliminar un usuario por Postman
 
     .then((response) => { 
 
-        res.status(200).send({mensaje: "Operación exitosa"});
+        res.status(200).send({mensaje: "El usuario ha sido eliminado exitosamente"});
     })
     .catch(e => {
 
