# proyecto_delilah/src/models/usuario.js
@@ -1,6 +1,6 @@
 const sequelize = require("../config/db");
 
-const updateUser = (id, estado) => sequelize.query("UPDATE usuarios SET estado_usuario = ? WHERE id_usuario = ? and administrador = ?", { replacements: [estado, id, "F"]});
+const deleteUser = (id) => sequelize.query("UPDATE usuarios SET estado_usuario = 'E' WHERE id_usuario = ? and administrador = ?", { replacements: [id, "F"]});
 
 const newUser = (arrayUsuarioNuevo) => sequelize.query("INSERT INTO usuarios (username, nombre_completo, email, telefono, direccion, password) VALUES (?,?,?,?,?,MD5(?))", { replacements: arrayUsuarioNuevo, type: sequelize.QueryTypes.INSERT });
 
@@ -9,7 +9,7 @@ const verifyUser = (username, email) => sequelize.query("SELECT username, email 
 const validateUser = (username_o_email, password) => sequelize.query("SELECT id_usuario, nombre_completo, direccion, administrador FROM usuarios WHERE (username = ? OR email = ?) AND password = MD5(?)", { replacements: [username_o_email, username_o_email, password], type: sequelize.QueryTypes.SELECT });
 
 module.exports = {
-    updateUser,
+    deleteUser,
     newUser,
     verifyUser,
     validateUser
